# astrocyte_db_prototype

./: .gitignore  README.md  STATUS.md  docker-compose.yml  example_mcp_config.json  pyproject.toml
examples/: __init__.py  demo_workflow.py
mcp_server/: QUICKSTART.md  README.md  __init__.py  server.py
mcp_server/ai_guidance/: tool_usage_guide.md
src/: __init__.py  config.py  consumers.py  database.py  leaflet_domain.py  models.py  producers.py  storage_manager.py  types.py
src/api/: main.py
src/api/routes/: __init__.py  events.py  health.py  stream.py
