[project]
name = "astrocyte-db-prototype"
version = "0.1.0"
description = "Astrocyte-inspired active database prototype demonstrating complex event processing"
authors = [
    { name = "Ty", email = "angrysky56@github" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis==6.4.0",
    "pydantic==2.10.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
