[project]
name = "astrocyte-db-prototype"
version = "0.2.0"
description = "Astrocyte-inspired active database with persistent storage and query capabilities"
authors = [
    { name = "Ty", email = "angrysky56@github" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "redis==6.4.0",
    "pydantic==2.10.5",
    "fastapi==0.115.13",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "psycopg2-binary==2.9.10",
    "python-multipart==0.0.20",
    "websockets==14.1",
    "httpx==0.28.1",
    "mcp[cli]>=1.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.2",
    "ruff==0.8.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
